--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -3,23 +3,18 @@
 
 @main("Upgrade Payment") {
 
-    @fragments.layout.sectionHeader("Payment")
-
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
         @CSRF.formField
         @fragments.form.errorMessageDisplay()
-        @fragments.form.addressDetail("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true,
+        @fragments.form.sectionHeading("Payment")
+        @fragments.form.addressDetail("Delivery address", "Once you've joined Guardian Membership we'll send you a welcome pack in the post.", "deliveryAddress", true,
         userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
-        @fragments.form.cardDetail()
-        @fragments.form.billingAddressCTA()
-        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true,
-        userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode,
-        userFields.billingAddress4, userFields.billingCountry)
+
+        @fragments.form.sectionHeading("Billing")
         @fragments.form.paymentOptions(targetTier)
-        @fragments.form.submit("Join now")
-
+        @fragments.form.billingAddress("Billing address")
+        @fragments.form.addressDetail("", "", "billingAddress", true, userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4, userFields.billingCountry)
+        @fragments.form.cardDetail(targetTier)
+        @fragments.form.submit("Join", "now", Some(targetTier))
     </form>
-
-    @fragments.tier.upgradeAside(targetTier)
-
 }
