--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -221,7 +221,7 @@ $mem-black: #333333;
 $mem-blue: #4bc6df;
 $mem-green: #aad802;
 $mem-buttonBlue: #197caa;
-
+$mem-darkGrey: #999999;
 $mem-button-confirm: #1a4683;
 $mem-button-cancel: #b8b8b8;
 
