mobile breakpoints for mastheads

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -11,11 +11,11 @@
 
     @* ===== Homepage hero ===== *@
 
-    <div class="home-slice home-slice--epic home-slice--epic-lower-copy-block u-cf">
+    <div class="home-slice home-slice--epic home-slice--epic-home-page u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h1 class="home-slice__headline">We believe that the open exchange of information,
-                    ideas and opinions has the power to change the world for the better</h1>
+                    ideas and opinions<br /><span class="headline-highlight">has the power to change the world for the better</span></h1>
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy"></p>
