StripeService tweaks for config and removal of unit tests
Working towards being able to take these services and put them in
membership-common.

The unit tests didn't look very valuable to me?

Fixed with updated config keys...!

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -46,7 +46,7 @@
         css: {
             loaded: false
         },
-        stripePublicKey: '@Config.stripeApiKeyPublic'
+        stripePublicKey: '@Config.stripeApiConfig.publicKey'
     };
 
     (function(isModern) {
