--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -51,8 +51,8 @@
             <div class="event__content__inner event__content__inner--sub">
                 <div class="event__content-body">
                     <div class="event__meta">
+                        <div class="event__time">@prettyDateWithTime(event.start)</div>
                         <div class="event__location">
-                            <span class="icon location--icon"></span>
                             <span class="event__venue-name">@event.venue.name</span>,
                             <span class="event__address">
                                 @if(!event.addressOne.isEmpty){ <span>@event.addressOne</span>, }
@@ -63,7 +63,6 @@
                                 @if(!event.postal_code.isEmpty){ <span>@event.postal_code</span> }
                             </span>
                         </div>
-                        <div class="event__time"><span class="icon time--icon"></span>@prettyDateWithTime(event.start)</div>
                     </div>
 
                     @for(ticket <- event.ticketClassesHead) {
