--- a/frontend/assets/stylesheets/pages/_about.scss
+++ b/frontend/assets/stylesheets/pages/_about.scss
@@ -23,7 +23,7 @@ h2.about-block-title {
         @include fs-bodyHeading(1);
         border-top: 1px solid $c-neutral5;
         @include rem((
-            padding: $gs-gutter/2 0 0 0
+            padding: $gs-gutter/2 0
         ));
     }
 
