Contact us URL update

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -3,7 +3,7 @@
     <div class="l-footer__secondary gs-container" role="contentinfo">
         <ul class="colophon u-cf">
             <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
-            <li class="colophon__item"><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
+            <li class="colophon__item"><a data-link-name="contact" href="http://www.theguardian.com/help/contact-us">Contact us</a></li>
             <li class="colophon__item"><a data-link-name="feedback" href="/feedback">Feedback</a></li>
             <li class="colophon__item"><a data-link-name="terms" href="http://www.theguardian.com/help/terms-of-service">Terms &amp; conditions</a></li>
             <li class="colophon__item"><a data-link-name="privacy" href="http://www.theguardian.com/help/privacy-policy">Privacy policy</a></li>
