added boolean to display required fields, copy changes

--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -15,6 +15,7 @@
         @CSRF.formField
 
         @fragments.form.errorMessageDisplay()
+        @fragments.form.sectionHeading("Tell us what you think", true)
         @fragments.form.feedback()
         @fragments.form.submit("Send feedback now")
     </form>
