--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -11,9 +11,9 @@ passwordExists: Boolean)(implicit token: play.filters.csrf.CSRF.Token)
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @CSRF.formField
         @fragments.form.errorMessageDisplay()
-        @fragments.form.sectionHeading("Guardian membership events in your area")
+        @fragments.form.sectionHeading("Location", true)
         @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
-        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false,
+        @fragments.form.addressDetail("Address", "Tell us where you live and we'll keep you posted on events happening in your local community.", "deliveryAddress", false,
         userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
         @fragments.form.marketingChoices(marketingChoices.receiveGnmMarketing, marketingChoices.receive3rdPartyMarketing)
 
