copy change to funnel on sign in page

--- a/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
+++ b/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
@@ -1,6 +1,6 @@
 @(  Step: Int,
     StepOne: String = "Join us",
-    StepTwo: String = "Register or sign in",
+    StepTwo: String = "Sign in or Register",
     StepThree: String = "Address & Billing",
     StepFour: String = "Confirm membership")
 
