removed the required fields text this is now handled by the sectionHeading fragment

--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -1,9 +1,6 @@
 <fieldset class="fieldset">
 
-    <div class="fieldset__heading">
-        <h2 class="form__heading">Tell us what you think</h2>
-        <div class="form__note">All fields with <span class="required-marker"></span>required.</div>
-    </div>
+    <div class="fieldset__heading"></div>
 
     <div class="fieldset__fields">
 
