--- a/frontend/app/views/fragments/form/sectionHeading.scala.html
+++ b/frontend/app/views/fragments/form/sectionHeading.scala.html
@@ -1,5 +1,6 @@
 @(title: String, showRequired: Boolean = false)
-<div class="form__section-heading">@title</div>
+
+<div class="form__section-heading section-sub-headline">@title</div>
 @if(showRequired == true) {
     <div class="form__note"><span class="required-marker"></span> required fields</div>
 }
