change to last step of funnel

--- a/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
+++ b/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
@@ -2,7 +2,7 @@
     StepOne: String = "Join us",
     StepTwo: String = "Sign in or Register",
     StepThree: String = "Address & Billing",
-    StepFour: String = "Confirm membership")
+    StepFour: String = "Thankyou")
 
 <div class="funnel">
     <ul class="funnel__rail inline-list">
