--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -174,3 +174,13 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
+
+.user-welcome {
+    @include rem((
+        margin-bottom: $gs-gutter
+    ));
+    .user-welcome__email {
+        font-weight: bold;
+    }
+
+}
