--- a/frontend/app/views/fragments/tier/summary.scala.html
+++ b/frontend/app/views/fragments/tier/summary.scala.html
@@ -6,7 +6,7 @@
 <table class="table table--responsive-font table--striped">
     <tr class="table__headline" role="row">
         <td class="summary-table__cell" role="scope">
-            Package
+            Tier
         </td>
         <td class="summary-table__cell" role="scope">
             @currentSubscription.planName
