--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -17,10 +17,10 @@
         <table class="table table--responsive-font table--striped">
             <tr class="table__headline" role="row">
                 <td class="summary-table__cell" role="scope">
-                    Package
+                    Tier
                 </td>
                 <td class="summary-table__cell" role="scope">
-                @subscriptionDetails.planName
+                    @subscriptionDetails.planName
                 </td>
             </tr>
             <tr class="summary-table__row" role="row">
