--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -35,10 +35,10 @@
                     <table class="table table--responsive-font table--striped">
                         <tr class="table__headline" role="row">
                             <td class="summary-table__cell" role="scope">
-                                Package
+                                Tier
                             </td>
                             <td class="summary-table__cell" role="scope">
-                                Friend plan
+                                Friend
                             </td>
                         </tr>
                         <tr class="summary-table__row" role="row">
