--- a/frontend/app/views/fragments/tier/upgradeAside.scala.html
+++ b/frontend/app/views/fragments/tier/upgradeAside.scala.html
@@ -20,7 +20,7 @@
             <p><strong>First payment</strong> will be taken today under the name Guardian Membership.</p>
         </li>
         <li class="form-detail__item">
-            <h2 class="form__heading">Changed you mind?</h2>
+            <h2 class="form__heading">Changed your mind?</h2>
             <p>You can cancel your membership at any time by calling our customer support on <a href="tel:080012345678">0800 1234 5678</a></p>
         </li>
     </ul>
