--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -16,7 +16,7 @@
                 <a class="action action--join" href="@Config.idWebAppSigninUrl(returnUrl)">Sign in</a>
             </div>
             <div class="signin__register">
-                <h3 class="signin__action-prompt">New to the guardian?</h3>
+                <h3 class="signin__action-prompt">New to the Guardian?</h3>
                 <h4>Please take a few short moments to register</h4>
                 <a class="action action--join" href="@Config.idWebAppRegisterUrl(returnUrl)">Register Now</a>
             </div>
