--- a/frontend/app/views/error404.scala.html
+++ b/frontend/app/views/error404.scala.html
@@ -1,4 +1,4 @@
 @main("Page not found") {
-    <h1>Page not found</h1>
-    <p>Sorry this page does not exist</p>
+    <h1>Error 404 - Page not found</h1>
+    <p>Sorry, this page does not exist.</p>
 }
