changed secondary buttons to primary ones

--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -24,7 +24,7 @@
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
-                        <a class="action action--secondary-button" href="/join/patron/enter-details">
+                        <a class="action action--join" href="/join/patron/enter-details">
                             <span class="action__text">Become a Patron today</span>
                         </a>
                     </div>
@@ -81,7 +81,7 @@
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
-                        <a class="action action--secondary-button" href="/join/patron/enter-details">
+                        <a class="action action--join" href="/join/patron/enter-details">
                             <span class="action__text">Become a Patron today</span>
                         </a>
                     </div>
