--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -20,6 +20,7 @@
 @import 'pages/tickets';
 @import 'pages/login';
 @import 'pages/about';
+@import 'pages/help';
 /* ==========================================================================
    Webfonts pages
    ========================================================================== */
