--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -7,6 +7,9 @@
     @fragments.form.errorMessageDisplay()
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
+
+        <p>By joining Guardian Membership, you are agreeing to our <a href="http://www.theguardian.com/help/terms-of-service" target="_blank">terms and conditions</a>.</p>
+
         <div class="actions js-waiting-container">
             <button type="submit" class="submit-input action action--logged-in js-submit-input">
             @Html(tier.fold(ctaTextPrepend)(tier =>
