add cancellation message

--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -18,6 +18,7 @@
                     Payments will taken on or shortly after the <span class="js-card-note-payment-taken" data-annual="@Dates.dayInMonthWithSuffixAndMonth()" data-month="@Dates.dayInMonthWithSuffix()">@Dates.dayInMonthWithSuffixAndMonth()</span> every <span class="js-card-note-pricing-period" data-annual="year" data-month="month">year</span>.
                 }
             </p>
+            <p class="credit-card-note">You can <span class="credit-card-note__header">cancel</span> your membership online through your profile page.</p>
         </div>
     </div>
 
